new memory_game

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,6 +1,7 @@
 {
     "high_scores": {
         "click_game": 24,
-        "brick_game": 980
+        "brick_game": 980,
+        "memory_game": 23
     }
 }
